2003-01-21  Itamar Shtull-Trauring  <itamar@itamarst.org>

	* twisted/internet/defer.py: added utility method for
	getting result of list of Deferreds as simple list.

2003-1-20  Jp Calderone <exarkun@twistedmatrix.com>

	* twisted/internet/interfaces.py: type argument removed from
	IReactorCore.resolve method.  IReactorPluggableResolver interface
	added.

	* twisted/internet/base.py: IReactorPluggable added to
	ReactorBase.__implements__ and ReactorBase.installResolver added.

2003-1-18  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/trial/unittest.py twisted/scripts/trial.py: adding --summary

2003-01-15  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing 1.0.2alpha3.

2003-01-13  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing 1.0.2alpha2.

2003-01-11  Itamar Shtull-Trauring  <itamar@itamarst.org>

	* twisted/protocols/shoutcast.py: add client support for
	Shoutcast MP3 streaming protocol.

2003-01-10  Itamar Shtull-Trauring  <itamar@itamarst.org>

	* twisted/scripts/twistd.py: in debug mode, jump into debugger for any
	logged exception.

2003-01-10  Dave Peticolas  <dave@krondo.com>

	* twisted/trial/unittest.py: enable test cruft checking

	* twisted/test/test_policies.py: cleanup timers

	* twisted/protocols/policies.py: start/stop bandwidth timers as needed

	* twisted/test/test_internet.py: cleanup timers

	* twisted/test/test_woven.py: expire sessions to clean up timers

	* twisted/web/woven/guard.py: stop timer when session expires

2003-1-9  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/web/google.py: Search google for best matches

2003-01-09  Dave Peticolas  <dave@krondo.com>

	* twisted/protocols/http.py: start/stop log timer as needed

2003-01-08  Dave Peticolas  <dave@krondo.com>

	* twisted/test/test_smtp.py: cleanup timers after test

	* twisted/trial/unittest.py: keep errors that are logged and
	submit them as test failures when tests are finished.
